--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,9 +17,7 @@
 html{
 	
 }
-body{
-	 scrollbar-gutter: stable both-edges;
-}
+
 /* Links */
 
 a, a:link, a:visited  {
